overflow fixed and css changes added

--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,120 @@
 
 }
 
+.features-icons {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 185px;
+}
+
+.features-icons img {
+    width: 130px;
+    height: 130px;
+}
+
+.title-animation {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.title-animation h2 {
+    font-size: 40px;
+    font-weight: 100;
+}
+
+.title-animation img {
+    max-height: 400px;
+    max-width: 100%;
+}
+
+#buy-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #eee;
+    padding: 60px 0 120px 0;
+}
+
+.footer-options h2 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 100;
+}
+
+.footer-options p {
+    text-align: center;
+    font-size: 12px;
+    margin-top: 15px;
+    font-style: italic;
+}
+
+.twitter-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.twitter-link img {
+    width: 15px;
+    height: 15px;
+    margin-right: 5px;
+}   
+
+.twitter-link a {
+    font-size: 12px;
+    color: black;
+    text-decoration: none;
+    border-bottom: black 0.5px solid;
+}
+
+.twitter-link a:hover {
+    color: #6e6d6d;
+    border-bottom: #6e6d6d 0.5px solid;
+}
+
+#p2-footer {
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 100;
+    text-align: center;
+}
+
+.email-sub {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+    gap: 5px;
+}
+
+.input-email {
+    width: 350px;
+    height: 30px;
+    border: 1px solid rgb(176, 174, 174);
+    border-radius: 3px;
+    padding: 7px;
+    font-size: 15px;
+}
+
+.email-sub button {
+    height: 30px;
+    padding: 0 17px;
+    font-size: 15px;
+    color: white;
+    background-color: #aaa;
+    border: none;
+    border-radius: 3px;
+}
+
+.email-sub button:hover {
+    background-color: #6e6d6d;
+    cursor: pointer;
+}
+
 .vision-container{
     display: flex;
     width: 100%;
@@ -202,5 +316,7 @@
     width: 90%;
     height: 90%;
     margin-left: 150px;
+    margin-top: 40px;
+    overflow: hidden;
 }
 
